Add delete functionality [Delivers #183362104]
